# kickpass

./: .travis.yml  CMakeLists.txt  CNAME  LICENCE  LICENSE  README.md
compat/bsd/: imsg.c  reallocarray.c  reallocarray.h
extra/completion/zsh/: _kickpass
include/: command.h  config.h  editor.h  error.h  kickpass.h  kickpass_config.h.in  kpagent.h  log.h  password.h  prompt.h  safe.h  storage.h
lib/: config.c  error.c  kickpass.c  kpagent.c  password.c  safe.c  storage.c
manual/: kickpass.1  kp_fini.3  kp_init.3  kp_init_workspace.3  kp_password_prompt.3  kp_safe_close.3  kp_safe_create.3  kp_safe_delete.3  kp_safe_get_path.3  kp_safe_init.3  kp_safe_load.3  kp_safe_open.3  kp_safe_rename.3  kp_safe_save.3  kp_safe_store.3  kp_version_major.3  kp_version_string.3
src/: command.h  create.c  create.h  editor.c  editor.h  error.c  error.h  init.c  init.h  kickpass.c  kickpass_config.h.in  log.c  log.h  main.c  prompt.c  prompt.h  safe.c  safe.h  storage.c  storage.h
src/command/: agent.c  agent.h  cat.c  cat.h  copy.c  copy.h  create.c  create.h  delete.c  delete.h  edit.c  edit.h  init.c  init.h  list.c  list.h  open.c  open.h  rename.c  rename.h
test/: CMakeLists.txt  cat.py  check_compat.h  check_improved.h  create-password-generation.sh  create-subdir.sh  create.expect  create.py  create.sh  delete.py  edit.py  edit.sh  init.py  init.sh  kptest.py  list.py  open.py  password-confirm.expect  password.expect  rename.py  safe.c  storage.c
